added resource tab to sidebar

--- a/app/views/login/canvas/_new_login_content.html.erb
+++ b/app/views/login/canvas/_new_login_content.html.erb
@@ -72,7 +72,7 @@
               </div>
               <div class="ic-Form-control ic-Form-control--login">
                 <button type="<%= login_btn_type %>" class="Button Button--login">
-                  <%= t('log_in', 'Log In') %>
+                  <%= t('log_in', 'Log in') %>
                 </button>
               </div>
             </div> <!-- ic-Login__actions -->
