Created Resource Tab in Sidebar

--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -123,7 +123,7 @@
                 <span class="menu-item__badge" style="display: none">0</span>
               </div>
               <div class="menu-item__text">
-                <%= t('new Resources !!!!') %>
+                <%= t('Resources') %>
               </div>
             </a>
           </li>
