--- a/app/assets/stylesheets/resources.css
+++ b/app/assets/stylesheets/resources.css
@@ -2,3 +2,16 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+body {
+	background-color: red;
+}
+
+.resources-row {
+	width: 100%;
+}
+
+.resources-col {
+	display: inline-block;
+	width: 33.3333%;
+}
