--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -116,8 +116,8 @@
               </div>
             </a>
           </li>
-
-         <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/resources') %>">
+          <!-- Start Custom Sidebar Section -->
+          <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/resources') %>">
             <a id="global_nav_conversations_link" href="/resources" class="ic-app-header__menu-list-link">
               <div class="menu-item-icon-container" aria-hidden="true">
                 <%= svg_icon :dashboard %>
@@ -129,13 +129,30 @@
             </a>
           </li>
 
-          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-          <script type="text/javascript">
-            $('.my-list-item').on('click', function(e){
-              e.preventDefault();
-              console.log('ive been clicked')
-            })
-          </script>
+          <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/videos') %>">
+            <a id="global_nav_conversations_link" href="/videos" class="ic-app-header__menu-list-link">
+              <div class="menu-item-icon-container" aria-hidden="true">
+                <%= svg_icon :dashboard %>
+                <span class="menu-item__badge" style="display: none">0</span>
+              </div>
+              <div class="menu-item__text">
+                <%= t('Help Videos') %>
+              </div>
+            </a>
+          </li>
+
+          <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/resources') %>">
+            <a id="global_nav_conversations_link" href="/resources" class="ic-app-header__menu-list-link">
+              <div class="menu-item-icon-container" aria-hidden="true">
+                <%= svg_icon :dashboard %>
+                <span class="menu-item__badge" style="display: none">0</span>
+              </div>
+              <div class="menu-item__text">
+                <%= t('Bug Support') %>
+              </div>
+            </a>
+          </li>
+          <!-- End Custom Sidebar Section -->
           <% unless @current_user.nil? %>
             <%= render(:partial => 'external_tools/global_nav_menu_items') %>
           <% end %>
