added temporary content to videos view

--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,1 +1,19 @@
 <h1>Instructional Videos Page</h1>
+
+<div class="facilitator-videos">
+	<h3>Facilitator Videos</h3>
+	<ul>
+		<li>Video 1</li>
+		<li>Video 2</li>
+		<li>Video 3</li>
+	</ul>
+</div>
+
+<div class="student-videos">
+	<h3>Student Videos</h3>
+	<ul>
+		<li>Video 1</li>
+		<li>Video 2</li>
+		<li>Video 3</li>
+	</ul>
+</div>
