--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -141,8 +141,8 @@
             </a>
           </li>
 
-          <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/resources') %>">
-            <a id="global_nav_conversations_link" href="/resources" class="ic-app-header__menu-list-link">
+          <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/support') %>">
+            <a id="global_nav_conversations_link" href="/support" class="ic-app-header__menu-list-link">
               <div class="menu-item-icon-container" aria-hidden="true">
                 <%= svg_icon :dashboard %>
                 <span class="menu-item__badge" style="display: none">0</span>
