created separate css files and placed in app/stylesheets/bundles

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -49,22 +49,4 @@
 	</div>	
 </div>
 
-<style type="text/css">
-	.resources-row {
-		width: 100%;
-	}
-
-	.resources-col {
-		display: inline-block;
-		text-align: center;
-		width: 33%
-	}
-	.resources-col p {
-		height: 250px;
-		padding: 15px 60px 30px 60px;
-	}
-	.resources-col img {
-		height: 100%;
-		width: 100%;
-	}
-</style>
+<% css_bundle :custom_resources %>
