--- a/app/views/support/show.html.erb
+++ b/app/views/support/show.html.erb
@@ -6,3 +6,5 @@
 	<p>Please provide your name, facility, upload a screenshot and a detailed message about the issue you faced.</p>
 	<p>We'll provide support as quickly as possible.</p>
 </div>
+
+<% css_bundle :custom_support %>
