--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Instructional Videos Page</h1>
+<hr>
 
 <div class="facilitator-videos">
 	<h3>Facilitator Videos</h3>
@@ -17,3 +18,5 @@
 		<li>Video 3</li>
 	</ul>
 </div>
+
+<% css_bundle :custom_videos %>
