added ./app/jsx/bundles/custom_test.js for js/jquery functionality

--- a/app/views/support/show.html.erb
+++ b/app/views/support/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Bug Support</h1>
+<h1 class="page-title">Bug Support</h1>
 <hr>
 
 <div class="support-header">
@@ -8,3 +8,4 @@
 </div>
 
 <% css_bundle :custom_support %>
+<% js_bundle :custom_test %> 
