added stylesheets for support and videos

--- a/app/stylesheets/bundles/custom_support.scss
+++ b/app/stylesheets/bundles/custom_support.scss
@@ -6,3 +6,15 @@
 .support-header {
 	text-align: center;
 }
+
+.page-title {
+	cursor: pointer;
+}
+
+h1 {
+	cursor: pointer;
+}
+
+#bug-support {
+	display: none;
+}
