added content to custom pages resources, support, videos

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -46,6 +46,14 @@
 			</p>
 			<h3>NPM</h3>
 		</a>
+	</div>
+	<div class="resources-col">
+		<a href="" target="_blank">
+			<p>
+				<img src="/images/test/jolt-logo-492x479.png">
+			</p>
+			<h3>JOLT</h3>
+		</a>
 	</div>	
 </div>
 
