changed calendar typo

--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -62,7 +62,7 @@
 				</div>				
 				<div id="instructor-calender" class="row video-div">
 					<img src="/custom/video-placeholder-img.jpg">
-					<h3>Calender Overview</h3>
+					<h3>Calendar Overview</h3>
 				</div>
 				<div id="instructor-analytics" class="row video-div">
 					<img src="/custom/video-placeholder-img.jpg">
