added wikipedia icon to resources view

--- a/app/stylesheets/bundles/custom_resources.scss
+++ b/app/stylesheets/bundles/custom_resources.scss
@@ -4,16 +4,17 @@
 */
 
 .resources-row {
+	margin-bottom: 50px;
 	width: 100%;
 }
 
 .resources-col {
 	display: inline-block;
 	text-align: center;
-	width: 33%
+	width: 24.5%
 }
 .resources-col p {
-	height: 250px;
+	height: 175px;
 	padding: 15px 60px 30px 60px;
 }
 .resources-col img {
