--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -27,10 +27,7 @@
 			<h3>Free Code Camp</h3>
 		</a>
 	</div>
-	
-</div>
 
-<div class="resouces-row">
 	<div class="resources-col">
 		<a href="https://pydio.com/" target="_blank">
 			<p>
@@ -39,6 +36,11 @@
 			<h3>Pydio</h3>
 		</a>
 	</div>
+	
+</div>
+
+<div class="resouces-row">
+	
 	<div class="resources-col">
 		<a href="https://www.npmjs.com/package/url" target="_blank">
 			<p>
@@ -47,12 +49,22 @@
 			<h3>NPM</h3>
 		</a>
 	</div>
+
+	<div class="resources-col">
+		<a href="https://www.npmjs.com/package/url" target="_blank">
+			<p>
+				<img src="/images/test/wikipedia-logo-400x400.jpeg">
+			</p>
+			<h3>Wikipedia</h3>
+		</a>
+	</div>
+
 	<div class="resources-col">
 		<a href="" target="_blank">
 			<p>
 				<img src="/images/test/jolt-logo-492x479.png">
 			</p>
-			<h3>JOLT</h3>
+			<h3>JOLT (Coming Soon)</h3>
 		</a>
 	</div>	
 </div>
