added wikipedia url to resources page

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -51,7 +51,7 @@
 	</div>
 
 	<div class="resources-col">
-		<a href="https://www.npmjs.com/package/url" target="_blank">
+		<a href="https://www.wikipedia.org/" target="_blank">
 			<p>
 				<img src="/images/test/wikipedia-logo-400x400.jpeg">
 			</p>
