changed 'Dashboard' text to 'Home'

--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -70,7 +70,9 @@
               <div class="menu-item-icon-container" aria-hidden="true">
                   <%= svg_icon :dashboard %>
               </div>
-              <div class="menu-item__text"><%= t('Dashboard') %></div>
+              <div class="menu-item__text">
+                <%= t('Home') %>
+              </div>
             </a>
           </li>
           <li class="menu-item ic-app-header__menu-list-item <%= 'ic-app-header__menu-list-item--active' if active_path?('/courses') %>">
