hiding reports icon for student view

--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -175,7 +175,12 @@
             .ic-app-header__menu-list-item--active .ic-icon-svg--reports {
               fill: #008EE2;
             }
+            #reports {
+              display: none;
+            }
           </style>
+
+          <% js_bundle :custom_home %> 
 
           <!-- End Custom Sidebar Section -->
           <% unless @current_user.nil? %>
