added welcome page for students

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -58,3 +58,20 @@
 
   <%= render :partial => 'shared/dashboard_card' %>
 </div>
+
+<div class="welcome-page">
+  <div class="welcome-page-header">
+    <h1>Welcome <span id="dynamic-name"></span>!</h1>  
+  </div>
+
+  <div class="welcome-page-main">
+    <video class="video-player" src="/custom/student/videos/200 - Canvas Overview for Students.mp4" poster="/custom/student/posters/student-200-canvas-overview.png" controls></video>
+  </div>
+
+  <div class="welcome-page-footer">
+    <h3>What would you like to do now?</h3>
+    <button class="btn btn-success">SKIP TOUR AND GET STARTED</button><button class="btn btn-danger">GO ON A TOUR OF CANVAS</button>
+  </div>
+</div>
+
+
