--- a/app/stylesheets/bundles/dashboard.scss
+++ b/app/stylesheets/bundles/dashboard.scss
@@ -42,3 +42,32 @@
 }
 
 .ic-Dashboard-Activity { padding: $ic-sp; }
+
+
+// custom styles
+.welcome-page {
+  background-color: #333;
+  color: white;
+  height: 100%;
+  left: 0;
+  opacity: .8;
+  padding: 20px;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 100%;
+}
+
+.welcome-page-main {
+  padding-top: 50px;
+}
+
+.welcome-page-footer {
+  border: 1px solid #fff;
+  padding: 50px;
+  margin: 50px 15%;
+}
+
+.welcome-page-footer .btn {
+  margin: 25px 35px;
+}
