--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -120,7 +120,7 @@
           </li>
           <!-- Start Custom Sidebar Section -->
           <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/resources') %>">
-            <a id="global_nav_conversations_link" href="/resources" class="ic-app-header__menu-list-link">
+            <a id="global_nav_resources_link" href="/resources" class="ic-app-header__menu-list-link">
               <div class="menu-item-icon-container" aria-hidden="true">
                 <%= svg_icon :resources %>
                 <span class="menu-item__badge" style="display: none">0</span>
@@ -132,7 +132,7 @@
           </li>
 
           <li class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/videos') %>">
-            <a id="global_nav_conversations_link" href="/videos" class="ic-app-header__menu-list-link">
+            <a id="global_nav_videos_link" href="/videos" class="ic-app-header__menu-list-link">
               <div class="menu-item-icon-container" aria-hidden="true">
                 <%= svg_icon :videos %>
                 <span class="menu-item__badge" style="display: none">0</span>
@@ -142,18 +142,6 @@
               </div>
             </a>
           </li>
-
-          <!-- <li id="bug-support" class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/support') %>">
-            <a id="global_nav_conversations_link" href="/support" class="ic-app-header__menu-list-link">
-              <div class="menu-item-icon-container" aria-hidden="true">
-                <%= svg_icon :bug %>
-                <span class="menu-item__badge" style="display: none">0</span>
-              </div>
-              <div class="menu-item__text">
-                <%= t('Bug Support') %>
-              </div>
-            </a>
-          </li> -->
 
           <li id="reports" class="menu-item ic-app-header__menu-list-item <%= ' ic-app-header__menu-list-item--active' if active_path?('/reports') %>">
             <a id="global_nav_conversations_link" href="/" class="ic-app-header__menu-list-link">
