using local storage to show/hide canvas tour

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -78,10 +78,10 @@
 
     <div class="welcome-page-footer">
       <h3>What would you like to do now?</h3>
-      <button class="btn btn-danger skip-btn">SKIP TOUR AND GO HOME!</button><button class="btn btn-primary tour-btn">GO ON A TOUR OF CANVAS</button><br />
+      <button class="btn btn-danger skip-btn">SKIP TOUR AND GO HOME</button><button class="btn btn-primary tour-btn">GO ON A TOUR OF CANVAS</button><br />
       <div class="form-check">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
+          <input id="select-tour" class="form-check-input" type="checkbox" value="false">
           Don't show this page again
         </label>
       </div>
