--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -66,6 +66,7 @@
 
 <div class="welcome-page-outer">
   <div class="welcome-page-inner">
+    <img id="tlm-logo" src="/custom/img/TLM_logo_resized.jpg">
     <div class="header-main-wrapper">
       <div class="welcome-page-header">
         <h1>Welcome <span id="dynamic-name"></span>!</h1>  
