changed 'dashboard' to 'home'

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -42,7 +42,7 @@
   <div class="ic-Dashboard-header">
     <div class="grid-row bottom-xs">
       <div class="col-xs-9">
-        <h1 class="ic-Dashboard-header_title"><%= t :dashboard, "Dashboard" %></h1>
+        <h1 class="ic-Dashboard-header_title"><%= t :dashboard, "Home" %></h1>
       </div>
       <div class="col-xs-3 end-xs ic-Dashboard-content--align-right">
       <% if planner_enabled? %>
