added jolt and stackoverflow logos

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -62,9 +62,16 @@
 	<div class="resources-col">
 		<a href="" target="_blank">
 			<p>
-				<img src="/images/test/jolt-logo-492x479.png">
+				<img src="/images/test/jolt-logo.png">
 			</p>
 			<h3>JOLT (Coming Soon)</h3>
+		</a>
+	</div>	
+	<div class="resources-col">
+		<a href="https://stackoverflow.com/" target="_blank">
+			<p>
+				<img src="/images/test/so_logo_400x400.png">
+			<h3>Stack Overflow</h3>
 		</a>
 	</div>	
 </div>
