removed 'coming soon' from JOLT text

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -64,7 +64,7 @@
 			<p>
 				<img src="/images/test/jolt-logo.png">
 			</p>
-			<h3>JOLT (Coming Soon)</h3>
+			<h3>JOLT</h3>
 		</a>
 	</div>	
 	<div class="resources-col">
