hiding Account links on student view

--- a/app/stylesheets/bundles/custom_home.scss
+++ b/app/stylesheets/bundles/custom_home.scss
@@ -1,3 +1,11 @@
 #reports {
 	display: none;
 }
+
+.student a[href="/profile/settings"]{
+	display: none;
+}
+
+body.student a[title="Settings"]{
+	display: none;
+}
